xfsprogs-2.3.2 (10 September 2002)
	- Use pread/pwrite instead of lseek + read/write.

xfsprogs-2.3.1 (03 September 2002)
	- Allow xfs_db to accept negative numbers when writing values.

xfsprogs-2.3.0 (03 September 2002)
	- Several changes to geometry ioctl callers which will make
	  the tools useable on older kernel versions too.
	- Mainly affects xfs_bmap and xfs_growfs.
	- Do some additional cleanup after autoconf has run.

xfsprogs-2.2.3 (28 August 2002)
	- Update libdisk for a few other filesystems.
	- Fix call to lvdisplay on LVM volumes so that lvdisplay
	  always gets the full, real path to the volume, as required.

xfsprogs-2.2.2 (19 August 2002)
	- Fix endian bug in xfs_db, was not flipping 16-bit numbers.
	- Make xfs_repair recognize a NULLFSINO and print that in
	  addition to "18446744073709551615" for easy recognition.
	- Fix format string that xfs_repair uses when fixing inodes,
	  so that the new inode numbers are printed correctly.

xfsprogs-2.2.1 (09 August 2002)
	- Fix buglet in libdisk get_driver_block_major() routine which
	  would result in incorrect majors being returned for not-found
	  drivers.
	- Fix problem in install process with newer autoconf versions.

xfsprogs-2.2.0 (08 August 2002)
	- mkfs.xfs defaults to a blocksize of 4096 bytes, and no longer
	  uses getpagesize(2) to dynamically configure the default size.
	- Add EVMS stripe unit/width auto-detection support in mkfs.xfs
	  (patch from Luciano Chavez).
	- Sync user/kernel headers (arch.h incorporated into xfs_arch.h,
	  and several other minor changes).

xfsprogs-2.1.2 (17 July 2002)
	- Fix up log stripe unit specification options, and update
	  man page.  Also fix suffix handling for data su/sw options
	  (disallow unit suffixes on -d sunit,swidth,sw and -l sunit).
	  Add "s" (512-byte sectors) as valid suffix.
	- Automatically select v2 logs if a log stripe unit is
	  specified.

xfsprogs-2.1.1 (04 July 2002)
	- Build infrastructure updates so that configure options can be