@@ -1,3 +1,7 @@
+xfsprogs-2.3.3 (16 September 2002)
+	- Fix mkfs bug when optimizing AG size on striped devices,
+	  ASSERT(agcount != 0) tripped on single-ag filesystems.
+
 xfsprogs-2.3.2 (10 September 2002)
 	- Use pread/pwrite instead of lseek + read/write.
 
